# weekforge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: deployment.md  google-oauth-verification.md  langgraph-workflow.md  spec-guardrail-local-time.md
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  vitest.setup.ts
frontend/app/: globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/components/: AppAtmosphere.tsx  BusyBlockRow.test.tsx  BusyBlockRow.tsx  CalendarPicker.test.tsx  CalendarPicker.tsx  CouncilRoster.test.tsx  CouncilRoster.tsx  DebateMessage.tsx  DebateStatusBand.test.tsx  DebateStatusBand.tsx  DebateTimeline.test.tsx  DebateTimeline.tsx  ExportButton.test.tsx  ExportButton.tsx  ForgeLogo.tsx  ForgedModal.test.tsx  ForgedModal.tsx  GoogleConnect.test.tsx  GoogleConnect.tsx  HeraldModal.test.tsx  HeraldModal.tsx  HeraldSigil.tsx  ImportPreview.test.tsx  ImportPreview.tsx  IntakePanel.tsx  InterventionPanel.test.tsx  InterventionPanel.tsx  RoundDivider.tsx  ScheduleView.test.tsx  ScheduleView.tsx  TaskForm.test.tsx  TaskForm.tsx  TaskRow.test.tsx  TaskRow.tsx  WeekCalendar.test.tsx  WeekCalendar.tsx  WeekPicker.test.tsx  WeekPicker.tsx
frontend/lib/: agents.test.ts  agents.ts  api.test.ts  api.ts  apiBase.ts  auth.test.ts  auth.ts  authContext.test.tsx  authContext.tsx  buildRequest.ts  (+19 more)
tests/: conftest.py  test_calendar_provider.py  test_google_calendar.py  test_integration_calendars.py  test_integration_oauth.py  test_models.py  test_tasks_provider.py
(+100 files in other folders)
