[project]
name = "weekforge"
version = "0.1.0"
description = "WeekForge (Crucible) — a transparent multi-agent decision council."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "icalendar>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weekforge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
