[project]
name = "weekforge"
version = "0.1.0"
description = "WeekForge (Crucible) — a transparent multi-agent decision council."
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "pydantic>=2.7",
    "icalendar>=5.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "crewai>=0.80",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
weekforge-api = "weekforge.api.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weekforge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
